# ChangeLog for dev-lisp/cl-gd
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-gd/ChangeLog,v 1.1 2003/09/01 19:50:32 mkennedy Exp $

*cl-gd-0.1.0 (26 Aug 2003)

  26 Aug 2003; Matthew Kennedy <mkennedy@gentoo.org> :
  Initial import.  