@@ -1,5 +1,5 @@
-MD5 f6cd504631ed7e897f6b7206e9c0d011 ChangeLog 315
+MD5 38d8531c1755c8cbdb72be6f07cbcbed ChangeLog 432
 MD5 4a4d0a7d64db3f599c3ec87f0f219185 cl-gd-0.1.0.ebuild 1451
-MD5 4a4d0a7d64db3f599c3ec87f0f219185 cl-gd-0.1.4.ebuild 1451
+MD5 607c3e6369aed8022ed0354177ef7bcd cl-gd-0.1.4.ebuild 1451
 MD5 f47a6f22326f50ee0123303a9672eeab files/digest-cl-gd-0.1.0 63
 MD5 fec3d8a7a4baca19965abf58f34a84bb files/digest-cl-gd-0.1.4 63
